force-app/main/default/objects/HRCFSL_Quoted_Part__c/HRCFSL_Quoted_Part__c.object-meta.xml
<CustomObject>
    <description>Used for parts that are required as part of a Work Order Quote</description>
    <label>Quoted Part</label>
    <nameField>
        <displayFormat>QP-{0000000}</displayFormat>
        <label>Quoted Part Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quoted Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>