force-app/main/default/objects/HRCFSL_Quoted_Part__c/fields/Customer_Response__c.field-meta.xml
<CustomField>
    <fullName>Customer_Response__c</fullName>
    <label>Customer Response</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>HRCSVC_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>