force-app/main/default/objects/HRCFSL_Quoted_Part__c/fields/HRCFSL_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Part_Number__c</fullName>
    <formula>HRCFSL_Product__r.ProductCode</formula>
    <label>Part Number</label>
    <type>Text</type>
</CustomField>