force-app/main/default/objects/HRCFSL_Quoted_Part__c/fields/HRCFSL_Product__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quoted Parts</relationshipLabel>
    <relationshipName>Quoted_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>