force-app/main/default/objects/HRCFSL_Quoted_Part__c/fields/HRCSVC_Asset__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Asset__c</fullName>
    <formula>HRCFSL_Work_Order__r.Asset.Name</formula>
    <label>Asset</label>
    <type>Text</type>
</CustomField>