force-app/main/default/objects/HRCFSL_Quoted_Part__c/fields/HRCSVC_Calculated_Discount__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Calculated_Discount__c</fullName>
    <formula>IF(NOT(ISPICKVAL(HRCSVC_Coverage__c, &quot;Billable&quot;)) &amp;&amp; (ISBLANK(HRCSVC_Discount_Percent__c) || HRCSVC_Discount_Percent__c = 0), 1, HRCSVC_Discount_Percent__c)</formula>
    <label>Calculated Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>