force-app/main/default/objects/HRCFSL_Quoted_Part__c/fields/HRCSVC_Calculated_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Calculated_Unit_Price__c</fullName>
    <formula>IF(ISBLANK(HRCSVC_Unit_Price_Override__c), HRCSVC_Unit_Price__c, HRCSVC_Unit_Price_Override__c)</formula>
    <label>Calculated Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>