force-app/main/default/objects/HRCFSL_Quoted_Part__c/fields/HRCSVC_Consumed__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Consumed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox that denotes whether the quoted part has been consumed or not. Used in the consume quoted parts flow. SE-195.</description>
    <label>Consumed?</label>
    <type>Checkbox</type>
</CustomField>