force-app/main/default/objects/HRCFSL_Quoted_Part__c/fields/HRCSVC_Coverage__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Coverage__c</fullName>
    <label>Coverage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billable</fullName>
                <default>true</default>
                <label>Billable</label>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Service Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>