force-app/main/default/objects/HRCFSL_Quoted_Part__c/fields/HRCSVC_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Discount_Percent__c</fullName>
    <label>Discount Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>