force-app/main/default/objects/HRCFSL_Quoted_Part__c/fields/HRCSVC_Is_Labor__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Is_Labor__c</fullName>
    <formula>CONTAINS(LOWER(HRCFSL_Product__r.Name), &quot;labor&quot;)</formula>
    <label>Is Labor</label>
    <type>Checkbox</type>
</CustomField>