force-app/main/default/objects/HRCFSL_Quoted_Part__c/fields/HRCSVC_Not_In_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Not_In_Price_Book__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not In Price Book</label>
    <type>Checkbox</type>
</CustomField>