force-app/main/default/objects/HRCFSL_Quoted_Part__c/fields/HRCSVC_Parts_Location__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Parts_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Quoted Parts</relationshipLabel>
    <relationshipName>Quoted_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>