force-app/main/default/objects/HRCFSL_Quoted_Part__c/fields/HRCSVC_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Price_Book__c</fullName>
    <formula>HRCFSL_Work_Order__r.Pricebook2Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Book</label>
    <type>Text</type>
</CustomField>