force-app/main/default/objects/HRCFSL_Quoted_Part__c/fields/HRCSVC_Quantity_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Quantity_Unit_of_Measure__c</fullName>
    <label>Quantity Unit of Measure</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HRCSVC_Quantity_Unit_of_Measure</valueSetName>
    </valueSet>
</CustomField>