force-app/main/default/objects/HRCFSL_Quoted_Part__c/fields/HRCSVC_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Quote_Line__c</fullName>
    <label>Quote Line #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>