force-app/main/default/objects/HRCFSL_Quoted_Part__c/fields/HRCSVC_Quoted_Part_Record__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Quoted_Part_Record__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quoted Part Record</label>
    <type>Text</type>
</CustomField>