force-app/main/default/objects/HRCFSL_Quoted_Part__c/fields/HRCSVC_Related_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Related_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Quoted Parts (Related Work Order)</relationshipLabel>
    <relationshipName>Related_Quoted_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>