force-app/main/default/objects/HRCFSL_Quoted_Part__c/fields/HRCSVC_Tax__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Tax__c</fullName>
    <label>Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>