force-app/main/default/objects/HRCFSL_Quoted_Part__c/fields/HRCSVC_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Total_Price__c</fullName>
    <formula>(1 - HRCSVC_Calculated_Discount__c) * HRCSVC_Calculated_Unit_Price__c  * HRCFSL_Quantity__c + HRCSVC_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>