force-app/main/default/objects/HRCFSL_Quoted_Part__c/fields/HRCSVC_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recommended</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
                <default>true</default>
                <label>Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>