force-app/main/default/objects/HRCFSL_Quoted_Part__c/fields/HRCSVC_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Unit_Price__c</fullName>
    <formula>HRCFSL_Price__c/HRCFSL_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>