force-app/main/default/objects/HRCFSL_Quoted_Part__c/fields/HRCSVC_Unit_Price_Override__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Unit_Price_Override__c</fullName>
    <label>Unit Price Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>