force-app/main/default/objects/HRCFSL_Quoted_Part__c/validationRules/Contract_selected_and_not_populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_selected_and_not_populated</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(HRCSVC_Coverage__c, &quot;Service Contract&quot;) &amp;&amp; ISBLANK(HRCFSL_Work_Order__r.EntitlementId)</errorConditionFormula>
    <errorDisplayField>HRCSVC_Coverage__c</errorDisplayField>
    <errorMessage>You must have an entitlement populated on the work order for this coverage option.</errorMessage>
</ValidationRule>