force-app/main/default/objects/HRCFSL_Quoted_Part__c/validationRules/Product_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(HRCFSL_Product__c)</errorConditionFormula>
    <errorDisplayField>HRCFSL_Product__c</errorDisplayField>
    <errorMessage>Complete this field.</errorMessage>
</ValidationRule>