force-app/main/default/objects/HRCFSL_Quoted_Part__c/validationRules/Product_must_be_in_WOs_Price_Book.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_must_be_in_WOs_Price_Book</fullName>
    <active>true</active>
    <errorConditionFormula>HRCSVC_Not_In_Price_Book__c</errorConditionFormula>
    <errorMessage>The product you selected is not available for your business unit and region, or it isn&apos;t in the Price Book on the Work Order you are quoting. Select a different product or contact your system administrator for assistance.</errorMessage>
</ValidationRule>