force-app/main/default/objects/HRCFSL_Quoted_Part__c/validationRules/Warranty_selected_and_not_populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Warranty_selected_and_not_populated</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(HRCSVC_Coverage__c, &quot;Warranty&quot;) &amp;&amp; ISBLANK(HRCFSL_Work_Order__r.HRCSVC_AssetWarrantyId__c)</errorConditionFormula>
    <errorDisplayField>HRCSVC_Coverage__c</errorDisplayField>
    <errorMessage>You must have a warranty populated on the work order for this coverage option.</errorMessage>
</ValidationRule>